--- a/pagina.html
+++ b/pagina.html
@@ -664,7 +664,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="C:\Users\alanc\OneDrive\Escritorio\Desarrollo de negocios\pag\modelo3d.png">
+                    <img src="C:\Users\alanc\OneDrive\Escritorio\pag\imag\modelo3d.png">
                 </div>
             </div>
         </div>
@@ -733,7 +733,7 @@
             </div>
             <div class="specs-container">
                 <div class="specs-image">
-                    <img src="C:\Users\alanc\OneDrive\Escritorio\Desarrollo de negocios\pag\modelo2.png">
+                    <img src="C:\Users\alanc\OneDrive\Escritorio\pag\imag\modelo2.png">
                 </div>
                 <div class="specs-list">
                     <div class="spec-item">
@@ -775,16 +775,16 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="C:\Users\alanc\OneDrive\Escritorio\Desarrollo de negocios\pag\1.jpeg">
+                    <img src="C:\Users\alanc\OneDrive\Escritorio\pag\imag\1.jpeg">
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\alanc\OneDrive\Escritorio\Desarrollo de negocios\pag\2.jpeg">
+                    <img src="C:\Users\alanc\OneDrive\Escritorio\pag\imag\2.jpeg">
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\alanc\OneDrive\Escritorio\Desarrollo de negocios\pag\3.jpeg">
+                    <img src="C:\Users\alanc\OneDrive\Escritorio\pag\imag\3.jpeg">
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\alanc\OneDrive\Escritorio\Desarrollo de negocios\pag\4.jpeg">
+                    <img src="C:\Users\alanc\OneDrive\Escritorio\pag\imag\4.jpeg">
                 </div>
             </div>
         </div>
