--- a/pagina.html
+++ b/pagina.html
@@ -664,7 +664,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="C:\Users\alanc\OneDrive\Escritorio\pag\imag\modelo3d.png">
+                    <img src="pag\imag\modelo3d.png">
                 </div>
             </div>
         </div>
