--- a/pagina.html
+++ b/pagina.html
@@ -632,7 +632,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="C:\Users\alanc\OneDrive\Escritorio\Desarrollo de negocios\pag\logo2.png" class="logo">
+                <a href="logo2.png" class="logo">
                     <i class="fas fa-paper-plane"></i>
                     Sky Fly
                 </a>
@@ -664,7 +664,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="pag\imag\modelo3d.png">
+                    <img src="imag\modelo3d.png">
                 </div>
             </div>
         </div>
