--- a/pagina.html
+++ b/pagina.html
@@ -656,7 +656,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Disfruta de una piel más fresca y relajada con SkinFly</h1>
+                    <h1>Disfruta de una piel más fresca y relajada con Sky Fly</h1>
                     <p>El masajeador facial automático que cuida tu rostro con tecnología inteligente, vibración suave y hasta 40 minutos de uso por carga</p>
                     <div class="hero-btns">
                         <a href="#pricing" class="btn">Comprar ahora</a>
