--- a/pagina.html
+++ b/pagina.html
@@ -868,7 +868,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>Sky Fly</h3>
-                    <p>Líderes en tecnología de drones, comprometidos con la innovación y calidad para ofrecerte la mejor experiencia de vuelo.</p>
+                    <p>Líderes en tecnología, comprometidos con la innovación y calidad para ofrecerte la mejor experiencia</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
